[SPv175+] Combine clips in more cases

For consecutive clips in the same transform space, we combine the clips
in following more cases:
1. A rectangular clip and a rounded clip can bombine if the rectangular
   clip contains the rounded clip;
2. A clip path clip can combine with previous clips (but not following
   clips) if other combination conditions are satisfied.

Also no longer issue a pair of ClipRectOp and ClipRRectOp for one
rounded clip rect. It was needed when we didn't antialias clip rects.

Bug: 841227
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I2daf83ede63e3d6f65bd3eb5f89d8d1ca52cd440
Reviewed-on: https://chromium-review.googlesource.com/1052859
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557578}
Former-commit-id: 7f6fc0f6b0d391350bf6c6745514ec452873f081